end mobile view

--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -16,4 +16,5 @@ body {
   font-family: $barlowSemiCondensed;
   font-size: $font-med;
   font-weight: $medium;
+  background-color:$lightGrayishBlue;
 }
