--- a/scss/_cards.scss
+++ b/scss/_cards.scss
@@ -3,7 +3,7 @@
 
 .cards-wrapper {
   display: grid;
-  max-width: 327px;
+  max-width: 20.438rem;
   margin: auto;
 
   .card-item {
@@ -11,17 +11,16 @@
     grid-template-columns: 0.25fr auto;
     grid-template-rows: auto;
     grid-column-gap: 0;
-    grid-row-gap: 18px;
-
+    grid-row-gap: 1.125rem;
+    margin: 1.5rem 0;
     padding: 2rem;
-    border-radius: 8px;
-    box-shadow: 40px 60px 50px -47px rgba(72, 85, 106, 0.247378);
+    border-radius: 0.5rem;
+    box-shadow: 2.5rem 3.75rem 3.125rem -2.938rem rgba(72, 85, 106, 0.247378);
 
     &__header-wrapper {
       grid-area: 1 / 1 / 2 / 7;
       display: grid;
-      grid-template-columns: subgrid;
-      grid-template-rows: subgrid;
+      grid-template-columns: 0.20fr 1fr;
       grid-column-gap: 0;
       grid-row-gap: 0;
 
@@ -29,17 +28,15 @@
         display: grid;
         grid-area: 1/2/1/2;
         margin:  0;
-
-        font-size: 13px;
+        font-size: $font-med;
 
         &-img {
           display: grid;
-          grid-area: 1 / 1 / 1 / 2;
+          grid-area: 1 / 1 / span 2 / 2;
 
           & > img {
-            border: 2px solid #A775F1;
             border-radius: 50%;
-            width: 28px;
+            width: 1.75rem;
           }
         }
 
@@ -47,41 +44,53 @@
           display: grid;
           grid-area: span 1/2/span 1/7;
           opacity: 50%;
-
-          font-size: 11px;
-          margin: 14px 0;
+          font-size: $font-sm;
         }
-
       }
 
-    }
-
+    } // end .header-wrapper
 
     &__title {
       display: grid;
-
       grid-area: 2 / 1 / 3 / 7;
       font-size: $font-lg;
       font-weight: $semiBold;
+      line-height: 1.5rem;
     }
 
     &__message {
       display: grid;
-
       grid-area: 3 / 1 / 4 / 7;
-
       opacity: 70%;
+      line-height: 1.125rem;
     }
-  }
-}
 
-* {
-  //border: 1px solid red;
+  } // end .card-item
+
 }
 
 
 #item1 {
-  margin-top: 2vh;
   background-color: $moderateViolet;
   color: $white;
+}
+
+#item2 {
+  background-color: $veryDarkGrayishBlue;
+  color: $white;
+}
+
+#item3 {
+  background-color: $white;
+  color: $veryDarkGrayishBlue;
+}
+
+#item4 {
+  background-color: $veryDarkBlackishBlue;
+  color: $white;
+}
+
+#item5 {
+  background-color: $white;
+  color: $veryDarkGrayishBlue;
 }
