--- a/scss/style.css
+++ b/scss/style.css
@@ -13,11 +13,12 @@ body {
   font-family: "Barlow Semi Condensed", sans-serif;
   font-size: 0.813rem;
   font-weight: 500;
+  background-color: #ecf2f8;
 }
 
 .cards-wrapper {
   display: grid;
-  max-width: 327px;
+  max-width: 20.438rem;
   margin: auto;
 }
 .cards-wrapper .card-item {
@@ -25,16 +26,16 @@ body {
   grid-template-columns: 0.25fr auto;
   grid-template-rows: auto;
   grid-column-gap: 0;
-  grid-row-gap: 18px;
+  grid-row-gap: 1.125rem;
+  margin: 1.5rem 0;
   padding: 2rem;
-  border-radius: 8px;
-  box-shadow: 40px 60px 50px -47px rgba(72, 85, 106, 0.247378);
+  border-radius: 0.5rem;
+  box-shadow: 2.5rem 3.75rem 3.125rem -2.938rem rgba(72, 85, 106, 0.247378);
 }
 .cards-wrapper .card-item__header-wrapper {
   grid-area: 1/1/2/7;
   display: grid;
-  grid-template-columns: subgrid;
-  grid-template-rows: subgrid;
+  grid-template-columns: 0.2fr 1fr;
   grid-column-gap: 0;
   grid-row-gap: 0;
 }
@@ -42,40 +43,59 @@ body {
   display: grid;
   grid-area: 1/2/1/2;
   margin: 0;
-  font-size: 13px;
+  font-size: 0.813rem;
 }
 .cards-wrapper .card-item__header-wrapper .card-item__author-img {
   display: grid;
-  grid-area: 1/1/1/2;
+  grid-area: 1/1/span 2/2;
 }
 .cards-wrapper .card-item__header-wrapper .card-item__author-img > img {
-  border: 2px solid #A775F1;
   border-radius: 50%;
-  width: 28px;
+  width: 1.75rem;
 }
 .cards-wrapper .card-item__header-wrapper .card-item__author-status {
   display: grid;
   grid-area: span 1/2/span 1/7;
   opacity: 50%;
-  font-size: 11px;
-  margin: 14px 0;
+  font-size: 0.688rem;
 }
 .cards-wrapper .card-item__title {
   display: grid;
   grid-area: 2/1/3/7;
   font-size: 1.25rem;
   font-weight: 600;
+  line-height: 1.5rem;
 }
 .cards-wrapper .card-item__message {
   display: grid;
   grid-area: 3/1/4/7;
   opacity: 70%;
+  line-height: 1.125rem;
 }
 
 #item1 {
-  margin-top: 2vh;
   background-color: #7541c8;
   color: white;
+}
+
+#item2 {
+  background-color: #48556a;
+  color: white;
+}
+
+#item3 {
+  background-color: white;
+  color: #48556a;
+}
+
+#item4 {
+  background-color: #19212e;
+  color: white;
+}
+
+#item5 {
+  background-color: white;
+  color: #48556a;
 }
 
 /*# sourceMappingURL=style.css.map */
