--- a/scss/_cards.scss
+++ b/scss/_cards.scss
@@ -6,11 +6,11 @@
   margin: auto;
 
   @include breakpoint-up(desktop){
-    max-width: 1110px;
+    max-width: 69.375rem;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
-    gap: 24px 30px;
+    gap: 1.5rem 1.875rem;
     grid-template-areas:
     "id1 id1 id2 id5"
     "id3 id4 id4 id5";
@@ -37,8 +37,7 @@
       grid-template-columns: 0.20fr 1fr;
       grid-column-gap: 0;
       grid-row-gap: 0;
-
-      height: 28px;
+      height: 1.75rem;
 
       .card-item__author {
         display: grid;
@@ -72,6 +71,7 @@
       font-size: $font-lg;
       font-weight: $semiBold;
       line-height: 1.5rem;
+      z-index: 1;
     }
 
     &__message {
@@ -89,6 +89,11 @@
 #item1 {
   background-color: $moderateViolet;
   color: $white;
+  position: relative;
+
+  .card-item__message {
+    color: $lightGray;
+  }
 
   @include breakpoint-up(desktop){
     grid-area: id1;
@@ -148,5 +153,19 @@
     .card-item__header-wrapper {
       grid-template-columns: 0.30fr 1fr;
     }
+  }
+}
+
+.bg-img {
+  background-image: url("./../images/bg-pattern-quotation.svg");
+  position: absolute;
+  width: 6.5rem;
+  height: 6.375rem;
+  right: 7%;
+  top: 0;
+
+  @include breakpoint-up(desktop){
+    right: 15%;
+    top: 0;
   }
 }
