--- a/scss/style.css
+++ b/scss/style.css
@@ -28,11 +28,11 @@ body {
 }
 @media (min-width: 90em) {
   .cards-wrapper {
-    max-width: 1110px;
+    max-width: 69.375rem;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
-    gap: 24px 30px;
+    gap: 1.5rem 1.875rem;
     grid-template-areas: "id1 id1 id2 id5" "id3 id4 id4 id5";
   }
 }
@@ -58,7 +58,7 @@ body {
   grid-template-columns: 0.2fr 1fr;
   grid-column-gap: 0;
   grid-row-gap: 0;
-  height: 28px;
+  height: 1.75rem;
 }
 .cards-wrapper .card-item__header-wrapper .card-item__author {
   display: grid;
@@ -86,6 +86,7 @@ body {
   font-size: 1.25rem;
   font-weight: 600;
   line-height: 1.5rem;
+  z-index: 1;
 }
 .cards-wrapper .card-item__message {
   display: grid;
@@ -97,6 +98,10 @@ body {
 #item1 {
   background-color: #7541c8;
   color: white;
+  position: relative;
+}
+#item1 .card-item__message {
+  color: #cfcfcf;
 }
 @media (min-width: 90em) {
   #item1 {
@@ -156,6 +161,21 @@ body {
   }
   #item5 .card-item__header-wrapper {
     grid-template-columns: 0.3fr 1fr;
+  }
+}
+
+.bg-img {
+  background-image: url("./../images/bg-pattern-quotation.svg");
+  position: absolute;
+  width: 6.5rem;
+  height: 6.375rem;
+  right: 7%;
+  top: 0;
+}
+@media (min-width: 90em) {
+  .bg-img {
+    right: 15%;
+    top: 0;
   }
 }
 
